--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -36,7 +36,7 @@ label {
 
 .post-nav {
 	position: fixed;
-	top: 75px;
+	top: @navHeight;
 	bottom: 0;
 	left: 0;
 	right: 0;
